--- a/packages/picasso-testsuite-ui/package.json
+++ b/packages/picasso-testsuite-ui/package.json
@@ -22,6 +22,13 @@
         "defaults"
     ],
     "devDependencies": {
-        "@jtl/q-scripts": "^3.0.31"
+        "@jtl/q-scripts": "^3.0.31",
+        "@types/react": "16.9.36",
+        "@types/react-dom": "16.9.8",
+        "mobx": "5.15.4",
+        "mobx-react": "6.2.2",
+        "mobx-state-tree": "3.16.0",
+        "react-dev-utils": "10.2.1",
+        "react-dom": "16.13.1"
     }
 }
