--- a/packages/picasso-testsuite-ui/package.json
+++ b/packages/picasso-testsuite-ui/package.json
@@ -23,7 +23,8 @@
     ],
     "devDependencies": {
         "@jtl/q-scripts": "^3.0.31",
-        "@types/react": "16.9.36",
+        "react": "16.8.6",
+        "@types/react": "16.9.37",
         "@types/react-dom": "16.9.8",
         "mobx": "5.15.4",
         "mobx-react": "6.2.2",
