--- a/packages/picasso-testsuite-ui/package.json
+++ b/packages/picasso-testsuite-ui/package.json
@@ -22,14 +22,19 @@
         "defaults"
     ],
     "devDependencies": {
-        "@jtl/q-scripts": "^3.0.31",
-        "react": "16.8.6",
+        "@jtl/q-scripts": "3.0.32",
         "@types/react": "16.9.37",
         "@types/react-dom": "16.9.8",
         "mobx": "5.15.4",
         "mobx-react": "6.2.2",
         "mobx-state-tree": "3.16.0",
+        "react": "16.8.6",
         "react-dev-utils": "10.2.1",
         "react-dom": "16.13.1"
+    },
+    "dependencies": {
+        "@jtl/q-scripts": "3.0.31",
+        "antd": "4.3.4",
+        "webpack-dev-server": "3.10.3"
     }
 }
