--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
     "name": "@jtl/picasso-recordsystem",
     "private": true,
     "devDependencies": {
-        "lerna": "^3.22.0"
+        "lerna": "^3.22.0",
+        "react-router-dom": "^5.2.0"
     },
     "main": "src/index.ts",
     "workspaces": [
@@ -21,6 +22,7 @@
         }
     },
     "dependencies": {
-        "@ant-design/icons": "^4.2.1"
+        "@ant-design/icons": "^4.2.1",
+        "@types/react-router-dom": "^5.1.5"
     }
 }
